--- a/IMU_reader/Makefile
+++ b/IMU_reader/Makefile
@@ -1,6 +1,6 @@
 # This is a general use makefile for librobotcontrol projects written in C.
 # Just change the target name to match your main source code filename.
-TARGET = rc_altitude
+TARGET = sensors
 
 # compiler and linker binaries
 CC		:= gcc
